@@ -102,6 +102,23 @@ if test "$enable_usbmouse" != "no"; then
 	fi
 fi
 
+dnl Check for evdev build
+WCM_OPTION_EVDEV=no
+AC_ARG_ENABLE(evdev,
+[  --enable-evdev  Enable building evdev.o               default=no],
+	, enable_evdev=no)
+if test "$enable_evdev" != "no"; then
+	if test "$WCM_ENV_KERNEL" != "yes"; then
+		echo "***"; echo "*** WARNING:";
+		echo "*** Unable to compile evdev.o without kernel build environment"
+		echo "*** evdev.o will not be built"
+		echo "***"
+	else
+		WCM_OPTION_EVDEV=yes
+		WCM_MODULES="$WCM_MODULES evdev.o"
+	fi
+fi
+
 dnl Check for wacomdrv build
 WCM_OPTION_WACOMDRV=no
 AC_ARG_ENABLE(wacomdrv,
@@ -266,6 +283,7 @@ echo "            wacdump - $WCM_OPTION_WACDUMP $WCM_PATCH_WACDUMP"
 echo "             xidump - $WCM_OPTION_XIDUMP"
 echo "              hid.o - $WCM_OPTION_HID $WCM_PATCH_HID"
 echo "         usbmouse.o - $WCM_OPTION_USBMOUSE"
+echo "            evdev.o - $WCM_OPTION_EVDEV"
 echo "        wacom_drv.o - $WCM_OPTION_WACOMDRV $WCM_PATCH_WACOMDRV"
 if test -n "$WCM_OPTION_WACOMDRVV3"; then
 	echo "     wacom_drv-v3.o - $WCM_OPTION_WACOMDRVV3 $WCM_PATCH_WACOMDRVV3"
